Angular(directives y clienteformulario)

--- a/angular/src/app/formulario/formulario.component.scss
+++ b/angular/src/app/formulario/formulario.component.scss
@@ -21,3 +21,29 @@ form .ng-invalid {
 form .ng-invalid-parse {
   transition: all linear 1s;
 }
+form{
+  width: 450px;
+  margin: auto;
+  background: rgba(0,0,0,0.4);
+  box-sizing: border-box;
+  margin-top: 10px;
+  border-radius: 7px;
+  padding: 10px 20px;
+}
+
+input,textarea{
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 7px;
+  box-sizing: border-box;
+  font-size: 17px;
+  border: no;
+
+}
+
+textarea{
+  min-height: 100px;
+  max-height: 200px;
+  max-width: 100%;
+
+}
