--- a/angular/src/app/cliente-formulario/cliente-formulario.component.html
+++ b/angular/src/app/cliente-formulario/cliente-formulario.component.html
@@ -1,6 +1,8 @@
 <div>
   <input type="button" value="add" (click)="vm.add()" >
   <input type="button" value="edit" (click)="vm.edit()" >
+  <input type="button" value="delete" (click)="vm.delete()" >
+
 </div>
 
 <form #miForm="ngForm">
