--- a/angular/src/app/common-component/form-buttons/form-buttons.component.html
+++ b/angular/src/app/common-component/form-buttons/form-buttons.component.html
@@ -1,4 +1,6 @@
 <div>
   <input type="button" value="ENVIAR" class="btnEnviar" (click)="send.emit()">
   <input type="button" value="CANCELAR" class="btnCancelar" (click)="cancel.emit()">
+  <input type="button" value="BORRAR" class="btnBorrar" (click)="delete.emit()">
+
 </div>
