--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-dinamico></app-dinamico>
-<router-outlet></router-outlet>
+<app-header></app-header>
 <app-notification></app-notification>
+<router-outlet></router-outlet>
+
