--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
 <app-notification></app-notification>
-<router-outlet></router-outlet>
+<app-ajax-wait></app-ajax-wait>
+<main class="container-fluid">
+  <router-outlet></router-outlet>
+</main>
 
