--- a/angular/src/app/cliente-formulario/cliente-formulario.component.html
+++ b/angular/src/app/cliente-formulario/cliente-formulario.component.html
@@ -1,61 +1,72 @@
-<div>
-  <input type="button" value="add" (click)="vm.add()" >
-  <input type="button" value="edit" (click)="vm.edit()" >
-  <input type="button" value="delete" (click)="vm.delete()" >
-
-</div>
-
-<form #miForm="ngForm">
-  <div>
-    <label for="id">Código</label>
-    <input type="number" id="id" name="id" [(ngModel)]="vm.Elemento.id_cliente" #id_cliente="ngModel" required min="0" >
-    <output class="error" [hidden]="!id_cliente.hasError('required') || miForm.pristine">Es obligatorio. </output>
+<form #miForm="ngForm" cross-field-validation>
+  <div class="row">
+    <div class="col-md-2">
+      <label class="form-label" for="customer_id">Código</label>
+      <input type="number" class="form-control" [class.is-invalid]="customer_id.invalid" id="customer_id"
+        name="customer_id" [(ngModel)]="vm.Elemento.customer_id" #customer_id="ngModel" placeholder="Código del usuario"
+        required>
+      <app-show-errors-messages [errors]="customer_id.errors"></app-show-errors-messages>
+    </div>
+    <div class="col-md-4">
+      <label class="form-label" for="store_id">Tienda</label>
+      <select id="store_id" class="form-select" name="store_id" [(ngModel)]="vm.Elemento.store_id" #store_id="ngModel">
+        <option value="1">Tienda 1</option>
+        <option value="2">Tienda 2</option>
+      </select>
+    </div>
+    <div class="col-md-6">
+      <label class="form-label" for="first_name">Nombre</label>
+      <input type="text" class="form-control" [class.is-invalid]="first_name.invalid" id="first_name" name="first_name"
+        [(ngModel)]="vm.Elemento.first_name" #first_name="ngModel" notblank minlength="2" maxlength="50">
+      <app-show-errors-messages [errors]="first_name.errors"></app-show-errors-messages>
+    </div>
+    <div class="col-md-6">
+      <label class="form-label" for="last_name">Apellidos</label>
+      <input type="text" class="form-control" [class.is-invalid]="last_name.invalid" id="last_name" name="last_name"
+        [(ngModel)]="vm.Elemento.last_name" #last_name="ngModel" minlength="2" maxlength="50">
+      <app-show-errors-messages [errors]="last_name.errors"></app-show-errors-messages>
+    </div>
+    <div class="col-md-6">
+      <label class="form-label" for="email">Correo</label>
+      <input type="email" class="form-control" [class.is-invalid]="email.invalid" id="email" name="email"
+        [(ngModel)]="vm.Elemento.email" #email="ngModel" placeholder="Correo electrónico" required minlength="3">
+      <app-show-errors-messages [errors]="email.errors"></app-show-errors-messages>
+    </div>
+    <fieldset class="col-md-3">
+      <legend class="form-label" for="address_id">Dirección</legend>
+      <div class="form-check form-check-inline">
+        <input type="radio" class="form-check-input" id="address_id1" name="address_id"
+          [(ngModel)]="vm.Elemento.address_id" checked value="1">
+        <label class="form-check-label" for="address_id1">Casa</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input type="radio" class="form-check-input" id="address_id2" name="address_id"
+          [(ngModel)]="vm.Elemento.address_id" checked value="2">
+        <label class="form-check-label" for="address_id2">Trabajo</label>
+      </div>
+    </fieldset>
+    <div class="col-md-3">
+      <label class="form-label" for="create_date">F. Creación</label>
+      <input type="date" class="form-control" [class.is-invalid]="create_date.invalid" id="create_date"
+        name="create_date" [(ngModel)]="vm.Elemento.create_date" #create_date="ngModel" pastOrPresent>
+      <app-show-errors-messages [errors]="create_date.errors"></app-show-errors-messages>
+    </div>
+    <div class="col-md-3">
+      <label class="form-label" for="last_update">Última modificacion</label>
+      <input type="date" class="form-control" [class.is-invalid]="last_update.invalid" id="last_update"
+        name="last_update" [(ngModel)]="vm.Elemento.last_update" #last_update="ngModel" pastOrPresent
+        greaterOrEqualsThan="create_date" greaterOrEqualsThanMessage="No se puede haber sido modificado antes de crearlo">
+      <app-show-errors-messages [errors]="last_update.errors"></app-show-errors-messages>
+    </div>
+    <div class="col-md-3 form-check form-switch">
+      <div class="position-relative top-50 start-100 translate-middle">
+        <input type="checkbox" class="form-check-input" id="active" name="active" [(ngModel)]="vm.Elemento.active"
+          value="true" checked>
+        <label class="form-check-label" for="active">Activo</label>
+      </div>
+    </div>
   </div>
-  <div>
-    <label for="nombre">Nombre</label>
-    <input type="text" id="nombre" name="nombre" [(ngModel)]="vm.Elemento.nombre" #nombre="ngModel"
-      required minlength="2" maxlength="10" >
-    <output class="error" [hidden]="!nombre.errors?.required">Es obligatorio. </output>
-    <output class="error" [hidden]="!nombre.errors?.minlength && !nombre.errors?.maxlength">Debe tener entre 2 y 10 letras. </output>
-    {{ nombre.errors | json }}
+  <div class="row">
+    <app-form-buttons (send)="vm.send()" [send-disabled]="miForm.invalid" (cancel)="vm.cancel()" (delete)="vm.delete()"></app-form-buttons>
   </div>
-  <div>
-    <label for="apellidos">Apellidos</label>
-    <input type="text" id="apellidos" name="apellidos" [(ngModel)]="vm.Elemento.apellidos" #apellidos="ngModel"
-      minlength="2" maxlength="10" >
-    <output class="error" [hidden]="!apellidos.errors?.minlength && !apellidos.errors?.maxlength">Debe tener entre 2 y 10 letras. </output>
-  </div>
-  <div>
-    <label for="correo">Correo</label>
-    <input type="email" id="correo" name="correo" [(ngModel)]="vm.Elemento.correo" #correo="ngModel"
-      maxlength="100" email >
-    <output class="error" [hidden]="!correo.errors?.email">No es un correo electrónico valido. </output>
-  </div>
-  <div>
-    <label for="telefono">Telefono</label>
-    <input type="tel" id="telefono" name="telefono" [(ngModel)]="vm.Elemento.telefono" #telefono="ngModel"
-      maxlength="100" email >
-  </div>
-  <div>
-    <label for="edad">Edad</label>
-    <input type="number" id="edad" name="edad" [(ngModel)]="vm.Elemento.edad" #edad="ngModel"
-      min="16" max="67">
-    <output class="error" [hidden]="!edad.errors?.min">Debe tener al menos {{edad.errors?.min.min}} años. </output>
-    <output class="error" [hidden]="!edad.errors?.max">Debe tener {{edad.errors?.max.max}} años como máximo. </output>
-  </div>
-  <div>
-    <label for="fecha">Fecha</label>
-    <input type="date" id="fecha" name="fecha" [(ngModel)]="vm.Elemento.fecha" #fecha="ngModel" >
-  </div>
-  <div>
-    <label for="dni">DNI</label>
-    <input type="text" id="dni" name="dni" [(ngModel)]="vm.Elemento.dni" #dni="ngModel" >
-  </div>
-  <div>
-<br>
-    <app-form-buttons (send)="vm.send()" (cancel)="vm.cancel()"></app-form-buttons>
-
-  </div>
-
 </form>
-
