--- a/angular/src/app/libros/tmpl-form.component.html
+++ b/angular/src/app/libros/tmpl-form.component.html
@@ -4,7 +4,7 @@
     <div class="form-group col-md-2">
       <label class="form-label" for="id">Código:</label>
       <input class="form-control" [class.is-invalid]="id.invalid && miForm.dirty" type="number" name="id" id="id"
-        [(ngModel)]="VM.Elemento.idLibro" #id="ngModel" required min="0">
+        [(ngModel)]="VM.Elemento.id" #id="ngModel" required min="0">
       <div class="invalid-feedback" [hidden]="!id.hasError('required') || miForm.pristine">Es obligatorio</div>
     </div>
     <div class="form-group col-md-2">
