--- a/angular/src/app/libros/tmpl-list.sin-rutas.component.html
+++ b/angular/src/app/libros/tmpl-list.sin-rutas.component.html
@@ -16,7 +16,7 @@
         <div class="btn-group" role="group">
           <a class="btn btn-info" [routerLink]="[item.idLibro]"><i class="fas fa-eye"></i></a>
           <a class="btn btn-success" [routerLink]="[item.idLibro, 'edit']"><i class="fas fa-pen"></i></a>
-          <button class="btn btn-danger" (click)="VM.delete(item.idLibro)"><i class="far fa-trash-alt"></i></button>
+          <button class="btn btn-danger" (click)="VM.delete(item.id)"><i class="far fa-trash-alt"></i></button>
         </div>
       </td>
     </tr>
